# tennis-repo

./: .editorconfig  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  README.rst  db.sqlite3  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml  pytest.yml
core/: conftest.py
core/core/utils/: misc.py  settings.py
core/core_utils/utils/: collections.py  misc.py  pytest.py  settings.py
core/project/: urls.py
core/project/settings/: __init__.py  base.py  custom.py  docker.py  envvars.py
core/project/settings/templates/: settings.github.py
core/static/js/: myScript.js
core/static/style/: style.css
core/templates/: main.html  navbar.html
core/tests/: match_test.py
core/tests/fixtures/: __init__.py  match.py  misc.py
local/: settings.dev.py
match/: forms.py  match_test.py  models.py  urls.py  views.py
match/migrations/: 0001_initial.py  0002_alter_user_avatar.py  0002_gamespot_alter_matchpost_game_spot.py  0003_alter_user_avatar.py  0003_matchpost_user.py
match/templates/match/: confirm.html  conversation.html  conversation_list.html  delete.html  detail.html  index.html  login_register.html  main.html  post_form.html  profile.html  update_profile.html
scripts/: entrypoint.sh
