[tool.poetry]
name = "tutorial"
version = "0.1.0"
description = ""
authors = ["euyseok-han <euyseok.han@wesang.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.7"
djangorestframework = "^3.14.0"
django-filter = "^23.3"
django-split-settings = "^1.2.0"
pyyaml = "^6.0.1"
pytest = "^7.4.3"
psycopg2 = "^2.9.9"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
