[tool.poetry]
name = "tennis-repo"
version = "0.1.0"
description = ""
authors = ["euyseok-han <euyseok.han@wesang.com>"]
license = "MIT"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.3"
pytest-xdist = "^3.5.0"
pytest-django = "^4.7.0"
model-bakery = "^1.17.0"
daphne = "^4.0.0"
django-split-settings = "^1.2.0"
django = "^4.2.7"
djangorestframework = "^3.14.0"
django-filter = "^23.4"
psycopg2 = "^2.9.9"
pyyaml = "^6.0.1"
pre-commit = "^3.5.0"
pillow = "^10.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.project.settings"
pythonpath = "."
django_find_project = false
python_files = "*_test.py"
testpaths = ["core"]
filterwarnings = "ignore::DeprecationWarning:^(?!node\\.).*"
